--- a/app/src/main/res/layout/activity_food_groups.xml
+++ b/app/src/main/res/layout/activity_food_groups.xml
@@ -37,9 +37,9 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="10dp"
         android:background="@mipmap/papirus"
-        android:backgroundTint="#40FFFFFF"
         android:padding="20dp"
         android:text="@string/choose_food_group"
+        android:textAllCaps="true"
         android:textColor="@android:color/background_dark"
         android:textSize="20sp"
         android:textStyle="bold|italic"
