--- a/app/src/main/res/layout/activity_items_info.xml
+++ b/app/src/main/res/layout/activity_items_info.xml
@@ -51,16 +51,19 @@
 
     <Button
         android:id="@+id/btnDefenice"
-        android:layout_width="0dp"
+        android:layout_width="306dp"
         android:layout_height="48dp"
         android:layout_marginEnd="62dp"
         android:layout_marginLeft="62dp"
         android:layout_marginRight="62dp"
         android:layout_marginStart="62dp"
         android:layout_marginTop="10dp"
-        android:background="#ad8360"
+
+        android:background="@android:color/darker_gray"
         android:onClick="onDefeniceClick"
         android:text="@string/what_is_it_"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView3" />
@@ -101,13 +104,13 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
+        android:layout_width="306dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginLeft="39dp"
+        android:layout_marginRight="39dp"
+        android:layout_marginStart="39dp"
         android:background="@android:color/darker_gray"
         android:onClick="onDefeniceTextClick"
         android:padding="10dp"
@@ -116,12 +119,11 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnInfo"
-        android:layout_width="70dp"
+        android:layout_width="83dp"
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -129,6 +131,8 @@
         android:layout_marginTop="8dp"
         android:background="@mipmap/info_01"
         android:onClick="onInfoClick"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="@+id/textView4"
