--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/background_wood"
+    android:background="@mipmap/backof"
     android:backgroundTint="#26FFFFFF"
     android:backgroundTintMode="src_over"
     android:minHeight="142dp"
     tools:context="nikita.bearadvice.MainActivity"
-    tools:targetApi="lollipop">
+    tools:targetApi="lollipop"
+    xmlns:foo="http://schemas.android.com/apk/res-auto"
+    >
 
 
     <Button
         android:id="@+id/btnFood"
         android:layout_width="185dp"
-        android:layout_height="211dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/foot"
+        android:layout_height="274dp"
+        android:background="@android:color/transparent"
         android:backgroundTintMode="src_over"
         android:onClick="onBtnFoodClick"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,9 +27,8 @@
     <Button
         android:id="@+id/btnDrinks"
         android:layout_width="185dp"
-        android:layout_height="210dp"
-        android:layout_marginBottom="16dp"
-        android:background="@mipmap/drinks"
+        android:layout_height="274dp"
+        android:background="@android:color/transparent"
         android:onClick="onBtnDrinksClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,49 +36,59 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#eae6e6"
-        android:backgroundTint="#40FFFFFF"
-        android:layout_marginEnd="212dp"
-        android:layout_marginLeft="73dp"
-        android:layout_marginRight="212dp"
-        android:layout_marginStart="73dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginRight="107dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="170dp"
         android:text="@string/welcome_text"
         android:textAlignment="center"
         android:textColor="@android:color/background_dark"
         android:textSize="@dimen/textSize"
-        android:textStyle="bold"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.012" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="27dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/drinks"
         android:textColor="@android:color/background_dark"
-        android:textSize="@dimen/textSize"
+        android:textSize="24sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="234dp"
-        tools:layout_editor_absoluteY="348dp" />
+        app:layout_constraintEnd_toEndOf="@+id/btnDrinks"
+        app:layout_constraintStart_toStartOf="@+id/btnDrinks"
+        app:layout_constraintTop_toTopOf="@+id/btnDrinks"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="28dp"
-        android:layout_marginLeft="29dp"
-        android:layout_marginStart="29dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/foot"
         android:textColor="@android:color/background_dark"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btnFood"
+        app:layout_constraintStart_toStartOf="@+id/btnFood"
         app:layout_constraintTop_toTopOf="@+id/btnFood"
         tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
