--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -20,7 +20,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:background="@mipmap/papirus"
+        android:background="@mipmap/bezramok"
         android:padding="10dp"
         android:paddingBottom="1dp"
         app:layout_constraintEnd_toEndOf="parent"
