--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_row"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/item_row">
+    android:layout_marginBottom="10dp">
 
 
     <TextView
@@ -13,6 +14,7 @@
 
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="10dp"
         android:background="@mipmap/row_image"
         android:padding="10dp"
         android:paddingBottom="5dp"
